# Project_MCP

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
ms_project_mcp/: __init__.py  server.py
ms_project_mcp/com/: __init__.py  connection.py  constants.py  helpers.py
ms_project_mcp/tools/: __init__.py  calendars.py  custom_fields.py  data_io.py  dependencies.py  filters.py  resources.py  scheduling.py  session.py  tasks_read.py  tasks_write.py  tracking.py  utility.py
scripts/: full_suite.py  list_tools.py  smoke_com.py
tests/: test_smoke.py
